styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root {
    --dark-blue: #163746;
    --light-blue: #98c1d4;
    --x-light-blue: #c4e1ee;
    --blue: #1f6585;
    --green: #5C8F21;
    --red: #BF1717;
    --orange: #e09407;
    --yellow: #F9DC5C;
    --white: #edeff0;
    --grey: #696969;
}

:focus-visible {
    outline-color: rgb(166, 0, 255);
    outline-offset: 3px;
    outline-width: 5px;
    outline-style: double;
}

body {
    width: 100%;
    min-height: 100vh;
    color: var(--white);
    font-family: "Unica One", sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: lightgrey;
}

.card {
    width: 320px;
    height: 620px;
    perspective: 600px;
}

.card-inner {
    width: 100%;
    height: 100%;
    border-radius: 15px;
    transition: transform 2s;
    transform-style: preserve-3d;
    position: relative;
    background: var(--dark-blue);
}

.card-inner.isFlipped {
    transform: rotateY(180deg);
}

.card-face {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    overflow: hidden;
    border-radius: 15px;
    box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
}

#back-face {
    transform: rotateY(180deg);
}

.card-content {
    width: 100%;
    height: 100%;
    padding: 25px;
}

#front-face .card-content {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.back-header {
    height: 20%;
    display: flex;
    justify-content: center;
    align-items: center;
    /* position: relative; */
}

h1 {
    font-size: 33px;
    text-transform: uppercase;
}

#front-face p {
    font-size: 16px;
    font-weight: 600;
}

h2 {
    font-weight: 600;
    letter-spacing: .5px;
    font-size: 25px;
    text-transform: uppercase;
}

h3 {
    font-size: 15px;
    margin-bottom: 20px;
}

p {
    font-size: 17px;
}

.back-header-text {
    text-align: center;
}

.profile-pic {
    display: none;
}

#logo {
    height: 25px;
    margin-right: 10px;
}

.social-icons {
    height: 25px;
    fill: var(--dark-blue);
    margin-right: 5px;
}


.front-logo,
.back-logo {
    height: 35px;
    position: absolute;
    bottom: 0;
    right: 0;
}


.social-icons-wrapper {
    margin-top: 10px;
    width: 85%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.social-links {
    border: none;
    height: fit-content;
    background-color: transparent;
    display: flex;
    align-items: center;
    color: grey;
    text-decoration: none;
    font-size: 10px;
    font-weight: 700;
    transition: all 1s ease;
    text-transform: uppercase;
    width: 100%;
}

.social-link-containers {
    display: flex;
    align-items: center;
    flex-direction: row-reverse;
    justify-content: flex-end;
    height: 50px;
    width: 100%;
    border-radius: 10px;
    padding: 5px;
}

.social-link-containers:hover,
.social-link-containers:focus,
.social-link-containers:active {
    background-color: var(--yellow);
}

.front-content-box,
.back-content-box {
    background-color: #FFFFFF;
    border-radius: 5px;
    height: 75%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 10px;
}

.back-content-left {
    width: 100%;
    justify-content: space-evenly;
    display: flex;
    flex-direction: column;
}

#qr-container {
    background-color: #F3F3F3;
    border-radius: 10px;
    padding: 10px;
    display: flex;
    align-items: center;
    height: 35%;
    font-size: 12px;
}

#qr-code {
    height: 100px;
    width: 100px;
    margin-right: 10px;
}

#qr-container p:first-of-type {
    font-size: 12px;
    margin-bottom: 10px;
    color: var(--dark-blue);
    font-family: 'Fira Sans Condensed', sans-serif;
    text-align: center;
}

.front-flip-btn,
.back-flip-btn {
    border-radius: 10px;
    background-color: var(--orange);
    border: none;
    z-index: 1;
    position: absolute;
    bottom: 10px;
    right: 15px;
    height: 50px;
    width: 50px;
    cursor: pointer;
}

.front-flip-icon,
.back-flip-icon {
    z-index: 2;
    position: absolute;
    bottom: 12px;
    right: 12px;
    height: 25px;
    width: 25px;
}

.hidden {
    display: none;
}

@media screen and (min-width: 768px) {

    .profile-pic {
        display: block;
        height: 100%;
        border: none;
        border-radius: 10px;
    }

    .card {
        height: 320px;
        width: 620px;
    }

    .back-header {
        height: 20%;
    }

    .back-content-box {
        height: 80%;
        display: flex;
        flex-direction: row;
        align-items: center;
    }

    .back-content-left {
        width: 60%;
    }

    .social-links {
        font-size: 12px;
    }

    .social-icons-wrapper {
        margin-top: 0;
        width: 40%;
    }

    /* .front-flip-btn {
        bottom: 12px;
        right: 10px;
        height: 30px;
        width: 30px;
    }

    .front-flip-icon {
        bottom: 8px;
        right: 7px;
        width: 15px;
        height: 15px;
    } */

    #qr-container {
        height: 100%;
        width: 17%;
        padding: 10px;
        flex-direction: column;
        justify-content: space-evenly;
    }
    
    #qr-code {
        height: 80px;
        width: 80px;
        margin-bottom: 10px;
        margin-right: 0;
    }

    #qr-container-text p {
        margin-bottom: 0;
    }

    .back-header-left {
        width: 36%;
        justify-content: flex-end;
    }

    .back-header-right {
        width: 40%;
    }

    .social-link-containers {
        height: 30px;
    }

    .social-icons-large {
        height: 25px;
        width: 25px;
    }

    .social-link-containers {
        height: 32px;
        width: 95%;
        margin: 0 auto;
        padding: 5px;
    }
}

